# dart-rust-minimal-ffi-grpc-example

./: README.md  analysis_options.yaml  makefile  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/duet/rescore/: MainActivity.kt
android/src/main/: AndroidManifest.xml
ios/: rescore.podspec
ios/Classes/: NativePlugin.h  NativePlugin.m  SwiftNativePlugin.swift
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge.dart  grpc.dart  main.dart  option.dart  services.dart
lib/protos/: .packages  pubspec.yaml
lib/protos/.dart_tool/: package_config.json
lib/protos/lib/: protos.dart
lib/protos/lib/src/: greeting.pb.dart  greeting.pbenum.dart  greeting.pbgrpc.dart  greeting.pbjson.dart
native/: Cargo.toml
native/src/: lib.rs  protos.mod.rs
native/src/protos/: greeting.rs  mod.rs
protos/: greeting.proto
