[package]
name = "native"
version = "0.0.1"
authors = ["Alastair Carey <alastair@alastaircarey.com>"]
edition = "2018"

[lib]
name = "native"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bytes = "0.5.4"
protobuf = { version = "2.14.0", features = ["with-bytes"] }
num-traits = "0.2.12"
num-derive = "0.3.0"
log = "0.4.8"
env_logger = "0.7.1"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.8.6"
